<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_scrollFlags="scroll">

    <LinearLayout
        android:id="@+id/no_device_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:baselineAligned="false"
        android:visibility="gone">

        <TextView
            android:id="@+id/no_devices_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_devices"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/device_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:columnCount="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/frequency_label"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/freq_minus"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="0dp"
                    android:elevation="4dp"
                    android:padding="0dp"
                    android:text="@string/minus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/freq_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_rounded"
                    android:ems="3"
                    android:gravity="center"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <Button
                    android:id="@+id/freq_plus"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:elevation="4dp"
                    android:text="@string/plus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/duty_label"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/duty_minus"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="0dp"
                    android:elevation="4dp"
                    android:padding="0dp"
                    android:text="@string/minus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/duty_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_rounded"
                    android:ems="3"
                    android:gravity="center"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <Button
                    android:id="@+id/duty_plus"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:elevation="4dp"
                    android:text="@string/plus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/voltage_text_view"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/voltage_minus"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="0dp"
                    android:elevation="4dp"
                    android:padding="0dp"
                    android:text="@string/minus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/voltage_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_rounded"
                    android:ems="3"
                    android:gravity="center"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <Button
                    android:id="@+id/voltage_plus"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:elevation="4dp"
                    android:text="@string/plus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </GridLayout>

        <Button
            android:id="@+id/bt_send"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/send" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
